--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -18,12 +19,7 @@
   },
   "scripts": {
     "predeploy": "yarn build",
-    "deploy": "yarn deploy:cleanup && yarn deploy:copy && yarn deploy:commit && yarn deploy:push && yarn deploy:cleanup-develop",
-    "deploy:cleanup": "git checkout main && rm -rf *.html *.css *.js *.svg *.png *.ico",
-    "deploy:copy": "mv build/* .",
-    "deploy:commit": "git add . && git commit -m 'Deploy updates'",
-    "deploy:push": "git push origin main",
-    "deploy:cleanup-develop": "rm -rf build && git checkout develop",
+    "deploy": "gh-pages -d build -b main",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
