added circle move to right spot

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cameron-d28.github.io",
   "version": "0.1.0",
+  "homepage": "https://cameron-d28.github.io",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -42,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   }
 }
